@@ -15,6 +15,10 @@ cdebconf (0.49) UNRELEASED; urgency=low
     - With the newt frontend, display of notes was corrupted when the
       extended description was shorter than the description.
       Closes: #218869.
+    - Look for translated Listorder fields so that translators may decide
+      not to sort Choices fields, e.g.
+        Listorder-ja.UTF-8: none
+      will prevent sorting in Japanese.
 
  -- Pierre Machard <pmachard@debian.org>  Sat,  1 Nov 2003 11:54:54 +0100
 
